test/modules/deitz/test_use_error.good
test_use_error.chpl:2: error: symbol x is multiply defined
test_use_error.chpl:6: note: also defined here
